# aeson-shits-its-pants

./: README.org  aeson-shits-its-pants.cabal  gen.py  run.sh  stack.yaml
src/: Main.hs
